force-app/main/default/objects/Opportunity/fields/HFS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HFS_Revenue__c</fullName>
    <label>HFS Revenue</label>
    <inlineHelpText>HFS take = 75% of total fee.</inlineHelpText>
    <formula>Total_Fee_Amount__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>