force-app/main/default/objects/Opportunity/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <label>Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>