force-app/main/default/objects/Opportunity/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Positions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>