force-app/main/default/objects/Opportunity/fields/Retainer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Amount__c</fullName>
    <label>Retainer Amount</label>
    <formula>Total_Debt__c * Retainer_Percent__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>