force-app/main/default/objects/Opportunity/fields/Retainer_Percent__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Percent__c</fullName>
    <label>Retainer Percent</label>
    <inlineHelpText>Front-loaded retainer % (default 12%).</inlineHelpText>
    <defaultValue>12</defaultValue>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>