force-app/main/default/objects/Opportunity/fields/Service_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Percent__c</fullName>
    <label>Service Fee Percent</label>
    <inlineHelpText>Service fee % over the term (default 20%).</inlineHelpText>
    <defaultValue>20</defaultValue>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>