force-app/main/default/objects/Opportunity/fields/Total_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt__c</fullName>
    <label>Total Debt</label>
    <inlineHelpText>Base amount fees are calculated from (from the deal sheet "Total Debt").</inlineHelpText>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>