force-app/main/default/objects/Opportunity/fields/Total_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_Amount__c</fullName>
    <label>Total Fee Amount</label>
    <formula>Retainer_Amount__c + Service_Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>