force-app/main/default/objects/Opportunity/fields/Total_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee_Percent__c</fullName>
    <label>Total Fee Percent</label>
    <inlineHelpText>Total fee % (retainer + service; standard model = 32%).</inlineHelpText>
    <formula>Retainer_Percent__c + Service_Fee_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>