force-app/main/default/objects/Opportunity/listViews/My_Open_Deals.listView-meta.xml
<ListView>
    <fullName>My_Open_Deals</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Office__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Total_Debt__c</columns>
    <columns>HFS_Revenue__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>My Open Deals</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>