force-app/main/default/objects/Opportunity/listViews/Open_Deals_by_Office_All.listView-meta.xml
<ListView>
    <fullName>Open_Deals_by_Office_All</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Office__c</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Total_Debt__c</columns>
    <columns>HFS_Revenue__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <label>Open Deals by Office (All)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>